# runhistory

./: DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_TROUBLESHOOTING.md  DOCKER_DEPLOYMENT.md  DOWNLOAD_YOUR_CODE.md  Dockerfile  Dockerfile.cloudrun  FACEBOOK_SHARING_GUIDE.md  INSTANT_DEPLOYMENT.md  MANUAL_DEPLOYMENT.md  SIMPLE_DEPLOYMENT.md  deploy_docker.sh  docker-compose.yml  main.py  pyproject.toml  railway.toml  render.yaml  replit.md  replit.yaml  start.py  start.sh
models/: models.py
services/: elevenlabs_service.py  image_overlay_service.py  openai_service.py  video_service.py
static/: index.html  script.js  style.css
utils/: file_manager.py
